package proj;

public interface Formation {
    public Linable[] toArray();
    public void put(Linable linable, int i);
    public String toString();
}
