package proj;

public interface Linable {

    public void setPosition(Position position);

    public Position getPosition();

    public int getValue();
}
